text-alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -731,8 +731,13 @@
 }
 
 .form__text {
-  text-align: center;
   margin-bottom: 32px;
+}
+
+@media (min-width: 768px) {
+  .form__text {
+    text-align: center;
+  }
 }
 
 .form__field {
