--- a/scss/pages/_page-main.scss
+++ b/scss/pages/_page-main.scss
@@ -301,8 +301,11 @@
   }
 
   &__text {
-    text-align: center;
     margin-bottom: 32px;
+
+    @include for-tablet {
+      text-align: center;
+    }
   }
 
   &__field {
